--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -122,6 +122,12 @@
         margin-left: 10px;
         cursor: pointer;
       }
+      .btn_search{
+        display: block;
+        @include md {
+          display: none;
+        }
+      }
       input {
         width: 100%;
         height: 50px;
